--- a/index-catalog.html
+++ b/index-catalog.html
@@ -141,6 +141,37 @@
                 </li>    
             </ul>    
 
+        <!--map-->
+            <section>
+                <img src="images/map_logo_nerds.png" alt="191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+                <div>
+                    <h2>NЁRDS DESIGN STUDIO</h2>
+                    <p>191186, Санкт-Петербург, 
+                        ул. Б. Конюшенная, д. 19/8</p>
+                    <p>тел. +7 (812) 275-75-75</p>
+                    <button type="button">Напишите нам</button>
+                </div>
+            </section>
+        <!--map-->    
+
+        <!--popup--> 
+        <div>
+            <b>Напишите нам</b>
+            <button type="button" aria-label="закрыть"></button>
+            <form method="post" action="https://echo.htmlacademy.ru">
+                <label>Ваше имя:
+                    <input type="text" placeholder="Имя Фамилия" name="user-name">
+                </label>
+                 <label>Ваш e-mail:
+                    <input type="email" placeholder="email@example.com" name="user-email">
+                </label>
+                <label>Текст письма:
+                    <textarea name="text" placeholder="В свободной форме"></textarea>
+                </label>   
+                <button type="submit">отправить</button>
+            </form>
+        </div>  
+        <!--popup-->    
         
         </main>  
         
