--- a/index-catalog.html
+++ b/index-catalog.html
@@ -103,22 +103,22 @@
             <section>
                 <ul>
                     <li>
-                        <a href="#"><img src="images/img-sedona.jpg" alt="Седона"></a>
+                        <a href="#"><img src="images/img_sedona.jpg" alt="Седона"></a>
                     </li>
                     <li>
-                        <a href=""><img src="images/img-pink.jpg" alt="Pink"></a>
+                        <a href=""><img src="images/img_pink.jpg" alt="Pink"></a>
                     </li>
                     <li>
-                        <a href=""><img src="images/img-barbershop.jpg" alt="Барбершоп"></a>
+                        <a href=""><img src="images/img_barbershop.jpg" alt="Барбершоп"></a>
                     </li>
                     <li>
-                        <a href=""><img src="images/img-mishka.jpg" alt="Mishka"></a>
+                        <a href=""><img src="images/img_mishka.jpg" alt="Mishka"></a>
                     </li>
                     <li>
-                        <a href=""><img src="images/img-aplus.jpg" alt="Aplus"></a>
+                        <a href=""><img src="images/img_aplus.jpg" alt="Aplus"></a>
                     </li>
                     <li>
-                        <a href=""><img src="images/img-kvast.jpg" alt="Кваст"></a>
+                        <a href=""><img src="images/img_kvast.jpg" alt="Кваст"></a>
                     </li>
                 </ul>
             </section>
