--- a/index.html
+++ b/index.html
@@ -28,13 +28,25 @@
 
         <main>  
 
-        <!--slider добавить текст на все слайды--> 
+        <!--slider--> 
             <section>
                 <div>
-                    <p>Долго, дорого, скрупулезно.</p>
+                    <b>Долго, дорого, скрупулезно.</b>
                     <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
                     <a href="#">УЗНАТЬ БОЛЬШЕ</a>
-                    <img src="images/slide-picture.jpg">
+                    <img src="images/slide_picture_1.jpg">
+                </div>
+                <div>
+                    <b>Любим математику как никто другой</b>
+                    <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+                    <a href="#">УЗНАТЬ БОЛЬШЕ</a>
+                    <img src="images/slide_picture_2.jpg">
+                </div>
+                   <div>
+                    <b>Только ночь, только хардкор</b>
+                    <p>Работать днем, как все? Мы против этого.Ближе к полуночи работа только начинается.</p>
+                    <a href="#">УЗНАТЬ БОЛЬШЕ</a>
+                    <img src="images/slide_picture_3.jpg">
                 </div>
             </section>    
         <!--slider-->    
@@ -42,7 +54,7 @@
             
             <ul>
                 <li>
-                    <img src="images/advantage-picture-red.jpg" alt="Beб-сайты">
+                    <img src="images/advantage_picture_red.jpg" alt="Beб-сайты">
                     <h2>Веб-сайты</h2>
                     <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
                     <a href="#">Заказать</a>  
@@ -50,7 +62,7 @@
 
 
                  <li>
-                    <img src="images/advantage-picture-green.jpg" alt="Приложения">
+                    <img src="images/advantage_picture_green.jpg" alt="Приложения">
                     <h2>Приложения</h2>
                      <p>Покорите топ-10 приложений в AppStore и Google Playир никогда не будет прежним после того как увидит ваш сайт!</p>
                     <a href="#">Заказать</a>
@@ -58,7 +70,7 @@
 
 
                 <li>
-                    <img src="images/advantage-picture-yellow.jpg" alt="Презентации">
+                    <img src="images/advantage_picture_yellow.jpg" alt="Презентации">
                     <h2>Презентации</h2>
                     <p>Вы даже не подозреваете, 
                      насколько вы изумительны!<p>
@@ -81,7 +93,7 @@
                 </ul>  
             </div>
             <div>
-                <img src="images/nerds-picture.jpg" alt="nerd's">
+                <img src="images/nerds_picture.jpg" alt="nerd's">
                 <b>с 2004 года Любим точность во всем:</b>
                 <div>
                     <p>146%</p>
