--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <nav>
       <div class="wrapper navigation">
         <ul>
-          <li class="logo"><a href="index.html"><img src="images/nerds_logo.svg" alt="Лого Нердс" width="160px" height="65px"></a></li>
+          <li class="logo"><a href="index.html"><img src="images/nerds_logo.svg" alt="Лого Нердс" width="160" height="65"></a></li>
         </ul>
         <ul class="site-navigation">
           <li class="breadcrumbs"><a href="#">Студия</a></li>
@@ -102,7 +102,7 @@
       </ul>
 
       <div class="big-divider"></div>
-      <section class="products">
+      <div class="products">
         <div class="represent-text">
           <p class="bold-text">Мы — маленькая, но гордая<br>
             дизайн-студия из Краснодара. </p>
@@ -139,44 +139,44 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
 
-      <section>
+      <div>
         <div class="big-divider"></div>
         <ul class="partner-list">
 
           <li class="partner">
             <a href="https://htmlacademy.ru/" target="_blank">
-              <img src="images/html_academy_logo.png" alt="Html Academy">
+              <img src="images/html_academy_logo.png" alt="Html Academy" width="199" height="68">
             </a>
           </li>
           <li class="small-divider"></li>
           <li class="partner">
             <a href="#">
-              <img src="images/barbershop_logo.png" alt="Barbershop">
+              <img src="images/barbershop_logo.png" alt="Barbershop" width="209" height="90">
             </a>
           </li>
           <li class="small-divider"></li>
           <li class="partner">
             <a href="#">
-              <img src="images/pink_logo.png" alt="Pink">
+              <img src="images/pink_logo.png" alt="Pink" width="185" height="52">
             </a>
           </li>
           <li class="small-divider"></li>
           <li class="partner">
             <a href="#">
-              <img src="images/mishka_logo.png" alt="Mishka">
+              <img src="images/mishka_logo.png" alt="Mishka" width="174" height="84">
             </a>
           </li>
         </ul>
 
         <div class="big-divider-bottom"></div>
 
-      </section>
+      </div>
 
     </div>
     <!--adress-->
-    <section class="wrapper">
+    <div class="wrapper">
       <div class="white-back-map">
         <div class="adress">
           <b class="adress-title">NЁRDS DESIGN STUDIO</b>
@@ -186,15 +186,14 @@
           <button type="button" class="write-back-btn">Напишите нам</button>
         </div>
       </div>
-    </section>
+    </div>
     <!--adress-->
     <!--map-->
-    <div>
+   <div class="map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3819.8676304657874!2d30.410304537029784!3d59.71868843642829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962115abc8977b%3A0x1d4d4bbd2222f4a6!2sKonyushennaya%20Ulitsa%2C%2019%2C%20Pushkin%2C%20Sankt-Peterburg%2C%20196601!5e0!3m2!1sde!2sru!4v1570974065014!5m2!1sde!2sru"
-        width="100%" height="416" frameborder="0" style="border:0;" allowfullscreen="">
+        width="1440" height="416">
       </iframe>
-
     </div>
     <!--map-->
 
@@ -242,7 +241,7 @@
   <!--форма-->
   <div class="wrapper">
     <footer>
-      <section class="flex">
+      <div class="flex">
         <ul class="socials">
           <li class="grey-cirle">
             <a href="#" aria-label="nerd's во вконтакте" class="social-vk"><span class="visually-hidden">vkontakte</span></a>
@@ -259,7 +258,7 @@
           <b class="footer-titel">Давайте дружить, это выгодно!</b>
           <p class="footer-text">Скидка 10% для друзей из социальных сетей.</p>
         </div>
-      </section>
+      </div>
     </footer>
 
   </div>
