--- a/index-catalog.html
+++ b/index-catalog.html
@@ -16,7 +16,7 @@
    <nav>
       <div class="wrapper navigation">
         <ul>
-          <li class="logo"><a href="index.html"><img src="images/nerds_logo.svg" alt="Лого Нердс" width="160px" height="65px"></a></li>
+          <li class="logo"><a href="index.html"><img src="images/nerds_logo.svg" alt="Лого Нердс" width="160" height="65"></a></li>
         </ul>
         <ul class="site-navigation">
           <li class="breadcrumbs"><a href="#">Студия</a></li>
@@ -45,7 +45,7 @@
     <div class="wrapper">
       <!--filter-->
       <div class="columns">
-        <section class="column-1">
+        <div class="column-1">
           <form method="get" action="https://echo.htmlacademy.ru" class="filter-container">
 
 
@@ -190,21 +190,19 @@
               <button type="submit" class="grey-btn">Показать</button>
             </fieldset>
           </form>
-        </section>
+        </div>
 
         <!--filter-->
 
         <!--filter 2-->
-        <section class="column-2">
-          <div>
-            <ul class="flex sort-filter">
+        <div class="column-2">
+            <div class="flex sort-filter">
               <ul>
                 <li>
                   <p class="filter-name sort-filter-name">СОРТИРОВАТЬ:</p>
                 </li>
               </ul>
               <ul class="flex sort-by-column-2">
-
                 <li>
                   <button type="button" class="sort-by-btn">По цене</button>
                 </li>
@@ -214,8 +212,8 @@
                 <li>
                   <button type="button" class="sort-by-btn">По названию</button>
                 </li>
-
-                <ul class="flex">
+               </ul>
+               <ul class="flex">
                   <li>
                     <button type="button" aria-label="по убыванию" class="arrow-down-btn"></button>
                   </li>
@@ -223,10 +221,8 @@
                     <button type="button" aria-label="по возрастанию" class="arrow-up-btn"></button>
                   </li>
                 </ul>
-              </ul>
-            </ul>
+              </div>
 
-          </div>
          <!--filter 2-->
 
 
@@ -235,7 +231,7 @@
           <ul class="catalog">
             <li class="website-item" >
               <a href="#">
-                <img src="images/img_sedona.jpg" alt="Седона" width="360px" height="576px">
+                <img src="images/img_sedona.jpg" alt="Седона" width="360" height="576">
               </a>
               <div class="grey-back" style="display:none;">
                   <a href="#">
@@ -248,7 +244,7 @@
             </li>
             <li class="website-item">
               <a href="">
-                <img src="images/img_pink.jpg" alt="Pink" width="360px" height="576px">
+                <img src="images/img_pink.jpg" alt="Pink" width="360" height="576">
               </a>
              <div class="grey-back" style="display:none;">
                   <a href="#">
@@ -260,7 +256,7 @@
             </li>
             <li class="website-item" >
               <a href="">
-                <img src="images/img_barbershop.jpg" alt="Барбершоп" width="360px" height="576px">
+                <img src="images/img_barbershop.jpg" alt="Барбершоп" width="360" height="576">
               </a>
               <div class="grey-back" style="display:none;">
                   <a href="#">
@@ -272,7 +268,7 @@
             </li>
             <li class="website-item">
               <a href="">
-                <img src="images/img_mishka.jpg" alt="Mishka" width="360px" height="576px">
+                <img src="images/img_mishka.jpg" alt="Mishka" width="360" height="576">
               </a>
               <div class="grey-back" style="display:none;">
                   <a href="#">
@@ -284,7 +280,7 @@
             </li>
             <li class="website-item">
               <a href="">
-                <img src="images/img_aplus.jpg" alt="Aplus" width="360px" height="576px">
+                <img src="images/img_aplus.jpg" alt="Aplus" width="360" height="576">
               </a>
              <div class="grey-back" style="display:none;">
                   <a href="#">
@@ -297,7 +293,7 @@
             <li class="website-item">
 
               <a href="">
-                <img src="images/img_kvast.jpg" alt="Кваст" width="360px" height="576px">
+                <img src="images/img_kvast.jpg" alt="Кваст" width="360" height="576">
               </a>
              <div class="grey-back" style="display:none;">
                   <a href="#">
@@ -329,13 +325,13 @@
         <!--page numbers-->
 
           <!--catalog-->
-        </section>
+        </div>
       </div>
 
 
     </div>
     <!--adress-->
-    <section class="wrapper">
+    <div class="wrapper">
       <div class="white-back-map">
         <div class="adress">
           <b class="adress-title">NЁRDS DESIGN STUDIO</b>
@@ -345,16 +341,15 @@
           <button type="button" class="write-back-btn">Напишите нам</button>
         </div>
       </div>
-    </section>
+    </div>
    <!--adress-->
    
     <!--map-->
-    <div>
+   <div class="map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3819.8676304657874!2d30.410304537029784!3d59.71868843642829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962115abc8977b%3A0x1d4d4bbd2222f4a6!2sKonyushennaya%20Ulitsa%2C%2019%2C%20Pushkin%2C%20Sankt-Peterburg%2C%20196601!5e0!3m2!1sde!2sru!4v1570974065014!5m2!1sde!2sru"
-        width="100%" height="416" frameborder="0" style="border:0;" allowfullscreen="">
+        width="1440" height="416">
       </iframe>
-
     </div>
     <!--map-->
 
@@ -401,7 +396,7 @@
   <!--форма-->
   <div class="wrapper">
     <footer>
-      <section class="flex">
+      <div class="flex">
         <ul class="socials">
           <li class="grey-cirle">
             <a href="#" aria-label="nerd's во вконтакте" class="social-vk"><span class="visually-hidden">vkontakte</span></a>
@@ -418,7 +413,7 @@
           <b class="footer-titel">Давайте дружить, это выгодно!</b>
           <p class="footer-text">Скидка 10% для друзей из социальных сетей.</p>
         </div>
-      </section>
+      </div>
     </footer>
 
 
