--- a/index.html
+++ b/index.html
@@ -13,24 +13,25 @@
 <body>
 
   <header>
-
-   <nav>
+    <nav>
       <div class="wrapper navigation">
-        <ul>
-          <li class="logo"><a href="index.html"><img src="images/nerds_logo.svg" alt="Лого Нердс" width="160" height="65"></a></li>
-
-        </ul>
+        <a href="index.html">
+          <img src="images/nerds_logo.svg" class="logo" alt="Лого Нердс" width="160" height="65">
+        </a>
         <ul class="site-navigation">
           <li class="breadcrumbs"><a href="#">Студия</a></li>
           <li class="breadcrumbs"><a href="#">Клиенты</a></li>
           <li class="breadcrumbs"><a href="index-catalog.html">Магазин</a></li>
           <li class="breadcrumbs"><a href="#">Контакты</a></li>
         </ul>
-        <ul class="site-navigation">
-          <li class="basket"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" style="margin-right:10px;">
-                <circle fill="#a6a6a6" cx="4.5" cy="13.5" r="1.5" />
-                <circle fill="#a6a6a6" cx="12.5" cy="13.5" r="1.5" />
-                <path fill="#a6a6a6" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z" /></svg>Корзина</a>
+        <ul class="site-navigation basket">
+          <li>
+            <a href="#">
+              <div class="basket-icon"></div>
+            </a>
+          </li>
+          <li>
+            <a class="basket" href="#">Корзина</a>
           </li>
         </ul>
       </div>
@@ -41,7 +42,6 @@
     <!--slider-->
     <section class="slider">
       <div class="wrapper">
-
         <h2 class="visually-hidden">
           Преимущества
         </h2>
@@ -56,21 +56,20 @@
 
         <ul class="slider-list">
           <li class="slider-item">
-            <b class="slider-text">Долго, дорого, скрупулезно.</b>
-            <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
+            <b class="slider-text">Долго, дорого,<br>скрупулезно.</b>
+            <p class="slider-paragraph">Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
             <a href="#" class="slider-btn">УЗНАТЬ БОЛЬШЕ</a>
           </li>
           <li class="slider-item">
-            <b class="slider-text">Любим математику, как никто другой</b>
-            <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций.</p>
+            <b class="slider-text">Любим математику,<br>как никто другой</b>
+            <p class="slider-paragraph">Никакого креатива, только математические формулы<br>для расчета идеальных пропорций.</p>
             <a href="#" class="slider-btn">УЗНАТЬ БОЛЬШЕ</a>
           </li>
           <li class="slider-item">
-            <b class="slider-text">Только ночь, только хардкор</b>
-            <p>Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
+            <b class="slider-text">Только ночь,<br>только хардкор</b>
+            <p class="slider-paragraph">Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
             <a href="#" class="slider-btn">УЗНАТЬ БОЛЬШЕ</a>
           </li>
-
         </ul>
       </div>
     </section>
@@ -80,7 +79,7 @@
 
       <ul class="products">
         <li class="advantages">
-          <img src="images/advantage_picture_red.jpg" class="advantage-picture" alt="Beб-сайты">
+          <div class="advantage-picture-red"></div>
           <h2>Веб-сайты</h2>
           <p class="products-text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a href="#" class="button-red">Заказать</a>
@@ -88,7 +87,7 @@
 
 
         <li class="advantages">
-          <img src="images/advantage_picture_green.jpg" class="advantage-picture" alt="Приложения">
+          <div class="advantage-picture-green"></div>
           <h2>Приложения</h2>
           <p class="products-text">Покорите топ-10 приложений в AppStore и Google Play</p>
           <a href="#" class="button-green">Заказать</a>
@@ -96,7 +95,7 @@
 
 
         <li class="advantages">
-          <img src="images/advantage_picture_yellow.jpg" class="advantage-picture" alt="Презентации">
+          <div class="advantage-picture-yellow"></div>
           <h2>Презентации</h2>
           <p class="products-text">Вы даже не подозреваете,
             насколько вы изумительны!<p>
@@ -111,23 +110,23 @@
         <div class="represent-text">
           <p class="bold-text">Мы — маленькая, но гордая<br>
             дизайн-студия из Краснодара. </p>
-          <p style="margin: 0 auto;">Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
-            <div class="we-make">
-              <b class="we-make-text-titel">Выполняем заказы на разработку:</b>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <div class="we-make">
+            <b class="we-make-text-titel">Выполняем заказы на разработку:</b>
 
-              <ul class="we-make-text">
+            <ul class="we-make-text">
 
-                <li>Веб-сайтов любой сложности</li>
-                <li>Мобильных приложений для iOS и Android</li>
-                <li>Слайдшоу и видео для корпоративных презентаций</li>
-              </ul>
-            </div>
+              <li>Веб-сайтов любой сложности</li>
+              <li>Мобильных приложений для iOS и Android</li>
+              <li>Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+          </div>
         </div>
 
 
         <div class="nerds-advantages-numbers">
 
-          <img src="images/nerds_picture.jpg" alt="nerd's" class="nerds-picture">
+          <img src="images/nerds_picture.jpg" alt="nerd's" class="nerds-picture" width="360" height="208">
           <b class="we-make-text-titel">с 2004 года Любим точность во всем:</b>
           <div class="numbers-all">
             <div class="numbers-text">
@@ -146,55 +145,40 @@
         </div>
 
       </div>
-
       <div>
 
-        <div class="big-divider"></div>
+      <div class="big-divider"></div>
         <ul class="partner-list">
-
           <li class="partner">
-
             <a href="https://htmlacademy.ru/" target="_blank">
               <img src="images/html_academy_logo.png" alt="Html Academy" width="199" height="68">
-
-
             </a>
           </li>
           <li class="small-divider"></li>
           <li class="partner">
             <a href="#">
-
               <img src="images/barbershop_logo.png" alt="Barbershop" width="209" height="90">
-
             </a>
           </li>
           <li class="small-divider"></li>
           <li class="partner">
             <a href="#">
-
               <img src="images/pink_logo.png" alt="Pink" width="185" height="52">
-
             </a>
           </li>
           <li class="small-divider"></li>
           <li class="partner">
             <a href="#">
-
               <img src="images/mishka_logo.png" alt="Mishka" width="174" height="84">
-
             </a>
           </li>
         </ul>
-
         <div class="big-divider-bottom"></div>
-
-
       </div>
-
     </div>
+
     <!--adress-->
     <div class="wrapper">
-
       <div class="white-back-map">
         <div class="adress">
           <b class="adress-title">NЁRDS DESIGN STUDIO</b>
@@ -204,65 +188,59 @@
           <button type="button" class="write-back-btn">Напишите нам</button>
         </div>
       </div>
-
     </div>
     <!--adress-->
+
     <!--map-->
     <div class="map">
-       <iframe
-         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3819.8676304657874!2d30.410304537029784!3d59.71868843642829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962115abc8977b%3A0x1d4d4bbd2222f4a6!2sKonyushennaya%20Ulitsa%2C%2019%2C%20Pushkin%2C%20Sankt-Peterburg%2C%20196601!5e0!3m2!1sde!2sru!4v1570974065014!5m2!1sde!2sru"
-         width="1440" height="416" class="map-content">
-       </iframe>
-     </div>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3819.8676304657874!2d30.410304537029784!3d59.71868843642829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962115abc8977b%3A0x1d4d4bbd2222f4a6!2sKonyushennaya%20Ulitsa%2C%2019%2C%20Pushkin%2C%20Sankt-Peterburg%2C%20196601!5e0!3m2!1sde!2sru!4v1570974065014!5m2!1sde!2sru"
+        width="1440" height="416" class="map-content">
+      </iframe>
+    </div>
     <!--map-->
-
 
     <div class="wrapper">
       <!--popup-->
-      <div class="white-back" style="display:none;">
+      <div class="white-back hidden-block">
 
         <form method="post" action="https://echo.htmlacademy.ru" class="popup-content">
-            <div class="popup-1">
-                <b class="title-popup">Напишите нам</b>
-                <button type="button" aria-label="закрыть" class="close-btn"></button>
-            </div>
-            <ul class="popup-textfields">
-                  <li>
-                    <label class="popup-text popup-name">Ваше имя:
-                        <input type="text" placeholder="Имя Фамилия" name="user-name">
-                    </label>
-                  </li>
-                  <li>
-                    <label class="popup-text">Ваш e-mail:
-                        <input type="email" placeholder="email@example.com" name="user-email">
-                    </label>
-                  </li>
-            </ul>
-            <ul>
-                <li>
-                   <label class="popup-text">Текст письма:
-                     <textarea name="text" placeholder="В свободной форме"></textarea>
-                   </label>
-                </li>
-                <li>
-                    <button type="submit" class="send-btn">отправить</button>
-                </li>
-            </ul>
+          <div class="popup-1">
+            <b class="title-popup">Напишите нам</b>
+            <button type="button" aria-label="закрыть" class="close-btn"></button>
+          </div>
+          <ul class="popup-textfields">
+            <li>
+              <label class="popup-text popup-name">Ваше имя:
+                <input type="text" placeholder="Имя Фамилия" name="user-name">
+              </label>
+            </li>
+            <li>
+              <label class="popup-text">Ваш e-mail:
+                <input type="email" placeholder="email@example.com" name="user-email">
+              </label>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <label class="popup-text">Текст письма:
+                <textarea name="text" placeholder="В свободной форме"></textarea>
+              </label>
+            </li>
+            <li>
+              <button type="submit" class="send-btn">отправить</button>
+            </li>
+          </ul>
         </form>
-
       </div>
-
       <!--popup-->
     </div>
-
   </main>
 
   <!--форма-->
   <div class="wrapper">
     <footer>
-
       <div class="flex">
-
         <ul class="socials">
           <li class="grey-cirle">
             <a href="#" aria-label="nerd's во вконтакте" class="social-vk"><span class="visually-hidden">vkontakte</span></a>
@@ -274,14 +252,11 @@
             <a href="#" aria-label="nerd's в инстаграме" class="social-inst"><span class="visually-hidden">instagram</span></a>
           </li>
         </ul>
-
         <div class="footer-socials">
           <b class="footer-titel">Давайте дружить, это выгодно!</b>
           <p class="footer-text">Скидка 10% для друзей из социальных сетей.</p>
         </div>
-
       </div>
-
     </footer>
 
   </div>
