--- a/index-catalog.html
+++ b/index-catalog.html
@@ -13,24 +13,24 @@
 
 <body>
   <header>
-
-   <nav>
+    <nav>
       <div class="wrapper navigation">
-        <ul>
-          <li class="logo"><a href="index.html"><img src="images/nerds_logo.svg" alt="Лого Нердс" width="160" height="65"></a></li>
-
-        </ul>
+        <a href="index.html">
+          <img src="images/nerds_logo.svg" class="logo" alt="Лого Нердс" width="160" height="65">
+        </a>
         <ul class="site-navigation">
           <li class="breadcrumbs"><a href="#">Студия</a></li>
           <li class="breadcrumbs"><a href="#">Клиенты</a></li>
           <li class="breadcrumbs"><a href="index-catalog.html">Магазин</a></li>
           <li class="breadcrumbs"><a href="#">Контакты</a></li>
         </ul>
-        <ul class="site-navigation">
-          <li class="basket"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" style="margin-right:10px;">
-                <circle fill="#a6a6a6" cx="4.5" cy="13.5" r="1.5" />
-                <circle fill="#a6a6a6" cx="12.5" cy="13.5" r="1.5" />
-                <path fill="#a6a6a6" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z" /></svg>Корзина</a>
+        <ul class="site-navigation basket">
+          <li> <a href="#">
+              <div class="basket-icon"></div>
+            </a>
+          </li>
+          <li>
+            <a class="basket" href="#">Корзина</a>
           </li>
         </ul>
       </div>
@@ -39,10 +39,7 @@
 
 
   <h1 class="page-name">Магазин готовых шаблонов</h1>
-
-
   <main>
-
     <!--new-->
     <div class="wrapper">
       <!--filter-->
@@ -203,87 +200,80 @@
         <!--filter 2-->
 
         <div class="column-2">
-            <div class="flex sort-filter">
+          <div class="flex sort-filter">
 
 
-              <ul>
-                <li>
-                  <p class="filter-name sort-filter-name">СОРТИРОВАТЬ:</p>
-                </li>
-              </ul>
+            <ul>
+              <li>
+                <p class="filter-name sort-filter-name">СОРТИРОВАТЬ:</p>
+              </li>
+            </ul>
+            <div class="flex sort-by-column-2">
               <ul class="flex sort-by-column-2">
 
+                <li class="sort-by-btn">
+                  <a href="#">По цене</a>
+                </li>
+                <li class="sort-by-btn">
+                  <a href="#">По типу</a>
+                </li>
+                <li class="sort-by-btn">
+                  <a href="#">По названию</a>
+                </li>
+
+              </ul>
+              <ul class="flex">
+
                 <li>
-                  <button type="button" class="sort-by-btn">По цене</button>
+                  <button type="button" aria-label="по убыванию" class="arrow-down-btn"></button>
                 </li>
                 <li>
-                  <button type="button" class="sort-by-btn">По типу</button>
+                  <button type="button" aria-label="по возрастанию" class="arrow-up-btn"></button>
                 </li>
-                <li>
-                  <button type="button" class="sort-by-btn">По названию</button>
-                </li>
-
-               </ul>
-               <ul class="flex">
-
-                  <li>
-                    <button type="button" aria-label="по убыванию" class="arrow-down-btn"></button>
-                  </li>
-                  <li>
-                    <button type="button" aria-label="по возрастанию" class="arrow-up-btn"></button>
-                  </li>
-                </ul>
-
-              </div>
-
-
-         <!--filter 2-->
+              </ul>
+            </div>
+          </div>
+          <!--filter 2-->
 
 
           <!--catalog-->
-
           <ul class="catalog">
-            <li class="website-item" >
+            <li class="website-item">
               <a href="#">
-
                 <img src="images/img_sedona.jpg" alt="Седона" width="360" height="576">
               </a>
-              <div class="grey-back" style="display:none;">
-                  <a href="#">
-                    <p class="website-item-name">Sedona</p>
-                    <p style="text-align: center;">Продуктовый лендинг приложения для iOS и Android</p>
-                  </a>
-                    <button type="button" class="price-btn">9 900 руб.</button>
-
+              <div class="grey-back hidden-block">
+                <a href="#">
+                  <p class="website-item-name">Sedona</p>
+                  <p class="website-item-text">Информационный сайт<br>для туристов</p>
+                </a>
+                <a href="#" class="price-btn">9 900 руб.</a>
               </div>
 
             </li>
             <li class="website-item">
               <a href="">
-
                 <img src="images/img_pink.jpg" alt="Pink" width="360" height="576">
               </a>
-             <div class="grey-back" style="display:none;">
-                  <a href="#">
-                    <p class="website-item-name">Pink</p>
-                    <p style="text-align: center;">Продуктовый лендинг приложения для iOS и Android</p>
-                  </a>
-                    <button type="button" class="price-btn">9 900 руб.</button>
-
+              <div class="grey-back hidden-block">
+                <a href="#">
+                  <p class="website-item-name">Pink</p>
+                  <p class="website-item-text">Продуктовый лендинг<br>приложения для iOS и Android</p>
+                </a>
+                <a href="#" class="price-btn">9 900 руб.</a>
               </div>
             </li>
-            <li class="website-item" >
+            <li class="website-item">
               <a href="">
 
                 <img src="images/img_barbershop.jpg" alt="Барбершоп" width="360" height="576">
               </a>
-              <div class="grey-back" style="display:none;">
-                  <a href="#">
-                    <p class="website-item-name">Barbershop</p>
-                    <p style="text-align: center;">Продуктовый лендинг приложения для iOS и Android</p>
-                  </a>
-                    <button type="button" class="price-btn">9 900 руб.</button>
-
+              <div class="grey-back hidden-block">
+                <a href="#">
+                  <p class="website-item-name">Barbershop</p>
+                  <p class="website-item-text">Сайт салона красоты.<br>Для мужчин, да.</p>
+                </a>
+                <a href="#" class="price-btn">9 900 руб.</a>
               </div>
             </li>
             <li class="website-item">
@@ -291,13 +281,12 @@
 
                 <img src="images/img_mishka.jpg" alt="Mishka" width="360" height="576">
               </a>
-              <div class="grey-back" style="display:none;">
-                  <a href="#">
-                    <p class="website-item-name">Mishka</p>
-                    <p style="text-align: center;">Продуктовый лендинг приложения для iOS и Android</p>
-                  </a>
-                    <button type="button" class="price-btn">9 900 руб.</button>
-
+              <div class="grey-back hidden-block">
+                <a href="#">
+                  <p class="website-item-name">Mishka</p>
+                  <p class="website-item-text">Интернет-магазин<br>вязаных игрушек</p>
+                </a>
+                <a href="#" class="price-btn">9 900 руб.</a>
               </div>
             </li>
             <li class="website-item">
@@ -305,13 +294,12 @@
 
                 <img src="images/img_aplus.jpg" alt="Aplus" width="360" height="576">
               </a>
-             <div class="grey-back" style="display:none;">
-                  <a href="#">
-                    <p class="website-item-name">Aplus</p>
-                    <p style="text-align: center;">Продуктовый лендинг приложения для iOS и Android</p>
-                  </a>
-                    <button type="button" class="price-btn">9 900 руб.</button>
-
+              <div class="grey-back hidden-block">
+                <a href="#">
+                  <p class="website-item-name">Aplus</p>
+                  <p class="website-item-text">Лендинг курсов повышения<br>квалификации</p>
+                </a>
+                <a href="#" class="price-btn">9 900 руб.</a>
               </div>
             </li>
             <li class="website-item">
@@ -320,48 +308,40 @@
 
                 <img src="images/img_kvast.jpg" alt="Кваст" width="360" height="576">
               </a>
-             <div class="grey-back" style="display:none;">
-                  <a href="#">
-                    <p class="website-item-name">Kvast</p>
-                    <p style="text-align: center;">Продуктовый лендинг приложения для iOS и Android</p>
-                  </a>
-                    <button type="button" class="price-btn">9 900 руб.</button>
-
+              <div class="grey-back hidden-block">
+                <a href="#">
+                  <p class="website-item-name">Kvast</p>
+                  <p class="website-item-text">Промо-сайт производителя<br>крафтового кваса</p>
+                </a>
+                <a href="#" class="price-btn">9 900 руб.</a>
               </div>
             </li>
           </ul>
-
-
-
-        <!--page numbers-->
-          <ul class="page-numbers">
-            <li class="page-number-btn">
-              <button type="button" class="page-number">1</button>
-            </li>
-            <li class="page-number-btn">
-              <button type="button" class="page-number">2</button>
-            </li>
-            <li class="page-number-btn">
-              <button type="button" class="page-number">3</button>
-            </li>
-            <li>
-              <button type="button" class="page-next">следующая</button>
-            </li>
-          </ul>
-        <!--page numbers-->
-
           <!--catalog-->
 
+          <!--page numbers-->
+          <ul class="page-numbers">
+            <li class="page-number-btn page-number">
+              <a href="#">1</a>
+            </li>
+            <li class="page-number-btn page-number">
+              <a href="#">2</a>
+            </li>
+            <li class="page-number-btn page-number">
+              <a href="#">3</a>
+            </li>
+            <li class="page-next-btn page-next">
+              <a href="#">следующая</a>
+            </li>
+          </ul>
+          <!--page numbers-->
+
         </div>
-
       </div>
-
-
     </div>
+
     <!--adress-->
-
     <div class="wrapper">
-
       <div class="white-back-map">
         <div class="adress">
           <b class="adress-title">NЁRDS DESIGN STUDIO</b>
@@ -372,10 +352,10 @@
         </div>
       </div>
     </div>
-   <!--adress-->
+    <!--adress-->
 
     <!--map-->
-   <div class="map">
+    <div class="map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3819.8676304657874!2d30.410304537029784!3d59.71868843642829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962115abc8977b%3A0x1d4d4bbd2222f4a6!2sKonyushennaya%20Ulitsa%2C%2019%2C%20Pushkin%2C%20Sankt-Peterburg%2C%20196601!5e0!3m2!1sde!2sru!4v1570974065014!5m2!1sde!2sru"
         width="1440" height="416" class="map-content">
@@ -385,40 +365,39 @@
 
 
     <div class="wrapper">
-<!--popup-->
-      <div class="white-back" style="display:none;">
+      <!--popup-->
+      <div class="white-back hidden-block">
 
         <form method="post" action="https://echo.htmlacademy.ru" class="popup-content">
-            <div class="popup-1">
-                <b class="title-popup">Напишите нам</b>
-                <button type="button" aria-label="закрыть" class="close-btn"></button>
-            </div>
-            <ul class="popup-textfields">
-                  <li>
-                    <label class="popup-text popup-name">Ваше имя:
-                        <input type="text" placeholder="Имя Фамилия" name="user-name">
-                    </label>
-                  </li>
-                  <li>
-                    <label class="popup-text">Ваш e-mail:
-                        <input type="email" placeholder="email@example.com" name="user-email">
-                    </label>
-                  </li>
-            </ul>
-            <ul>
-                <li>
-                   <label class="popup-text">Текст письма:
-                     <textarea name="text" placeholder="В свободной форме"></textarea>
-                   </label>
-                </li>
-                <li>
-                    <button type="submit" class="send-btn">отправить</button>
-                </li>
-            </ul>
+          <div class="popup-1">
+            <b class="title-popup">Напишите нам</b>
+            <button type="button" aria-label="закрыть" class="close-btn"></button>
+          </div>
+          <ul class="popup-textfields">
+            <li>
+              <label class="popup-text popup-name">Ваше имя:
+                <input type="text" placeholder="Имя Фамилия" name="user-name">
+              </label>
+            </li>
+            <li>
+              <label class="popup-text">Ваш e-mail:
+                <input type="email" placeholder="email@example.com" name="user-email">
+              </label>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <label class="popup-text">Текст письма:
+                <textarea name="text" placeholder="В свободной форме"></textarea>
+              </label>
+            </li>
+            <li>
+              <button type="submit" class="send-btn">отправить</button>
+            </li>
+          </ul>
         </form>
-
       </div>
-    <!--popup-->
+      <!--popup-->
     </div>
 
   </main>
